--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,8 +4,8 @@ body{
   }
   .box {
     transition: box-shadow .3s;
-    width: 300px;
-    height: 500px;
+    width: 700px;
+    height: 300px;
     margin: 50px;
     border-radius:10px;
     border: 1px solid #ccc;
@@ -36,5 +36,14 @@ body{
 
 body {
   background-image: url('https://f1.media.brightcove.com/7/1578086878/1578086878_6093482616001_6093241744001-vs.jpg?pubId=1578086878&videoId=6093241744001');
+}
+
+#overflowTest {
+  background: white;
+  padding: 15px;
+  width: 100%;
+  height: 750px;
+  overflow: scroll;
+  border: 1px solid #ccc;
 }
 
