--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,20 +21,56 @@
 
 <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+<link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
+    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection">
+    <link rel="stylesheet" href="css/font-awesome-4.3.0/css/font-awesome.min.css">
+    <link async="" href="http://fonts.googleapis.com/css?family=Berkshire%20Swash" rel="stylesheet" type="text/css">
+    <link async="" href="http://fonts.googleapis.com/css?family=Bad%20Script" rel="stylesheet" type="text/css">
+    <link async="" href="http://fonts.googleapis.com/css?family=Aclonica" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" href="images/favicon (10).ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon (10).ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://use.edgefonts.net/c/a709e5/1w;arizonia,2,WXG:W:n4/l" media="all">
+    <script async="" src="https://www.google-analytics.com/analytics.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/materialize.js"></script>
+    <script src="js/init.js"></script>
+    <script type="text/javascript" script-name="arizonia" src="http://use.edgefonts.net/arizonia.js"></script>
     <!-- Compiled and minified JavaScript -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     		<link rel="stylesheet" href="/css/style.css" type="text/css" />
            <script src="js/premiere.js"></script>
-=======
+
 
 
 </head>
 
 <body>
+    <div id="navbar" class="navbar-fixed scrollspy">
+    
+    <nav class="pink lighten-1">
+      
+        <div class="nav-wrapper container">
+            <div class="container"> <hi>Premiere</hi><a href="#navbar" class="brand-logo mLogo" style="margin-top: 15px;  color: white;
+  text-shadow: 5px 5px 6px black, 0 0 25px blue, 0 0 5px darkblue"> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+                    &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </a></div>
+ 
+            <a style="" href="#" data-activates="mobile-demo" class="button-collapse"><i
+                    class="mdi-navigation-menu"></i></a>
+            <ul class="right hide-on-med-and-down">
+
+                
+                
+
+            </ul>
+
+        </div>
+    </nav>
+</div>
+
     {{{body}}}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+   
 
 </body>
 
