--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,8 @@
 
 body{
     background: #fff;
+    background-image: url('https://f1.media.brightcove.com/7/1578086878/1578086878_6093482616001_6093241744001-vs.jpg?pubId=1578086878&videoId=6093241744001');
+
   }
   .box {
     transition: box-shadow .3s;
@@ -38,6 +40,7 @@ body {
   background-image: url('https://f1.media.brightcove.com/7/1578086878/1578086878_6093482616001_6093241744001-vs.jpg?pubId=1578086878&videoId=6093241744001');
 }
 
+/* 
 #overflowTest {
   background: white;
   padding: 15px;
@@ -45,5 +48,13 @@ body {
   height: 750px;
   overflow: scroll;
   border: 1px solid #ccc;
+} */
+
+.search-bar {
+  opacity: .5;
 }
 
+#search{
+  background-color: rgba(226, 160, 226, 0.26);
+  opacity: 50%;
+}
