--- a/views/dealer.handlebars
+++ b/views/dealer.handlebars
@@ -3,64 +3,61 @@
 <div class="container section scrollspy" id="themes">
   <div id="overflowTest">
 <div class="row">
-  <form action="dealer/create" method="POST">
+  <form action="/dealer/add" method="POST">
     <div class="row">
       <div class="input-field col s6">
-        <input id="make" type="text" class="validate">
+        <input name="carId" id="carId" type="text" class="validate">
+        <label for="carId">id</label>
+      </div>
+      <div class="input-field col s6">
+        <input name="make" id="make" type="text" class="validate">
         <label for="make">Make</label>
       </div>
       <div class="input-field col s6">
-        <input id="model" type="text" class="validate">
+        <input name="model" id="model" type="text" class="validate">
         <label for="model">Model</label>
       </div>
     </div>
 
     <div class="row">
       <div class="input-field col s6">
-        <input id="eng_dscr" type="text" class="validate">
-        <label for="eng_dscr">eng dscr</label>
+        <input name="engDscr" id="engDscr" type="text" class="validate">
+        <label for="engDscr">eng dscr</label>
       </div>
 
-
       <div class="input-field col s6">
-        <input id="photo" type="text" class="validate">
+        <input name="photo" id="photo" type="text" class="validate">
         <label for="photo">Photo</label>
       </div>
     </div>
 
     <div class="row">
       <div class="input-field col s6">
-        <input id="drive" type="text" class="validate">
-        <label for="drive">Drive</label>
-      </div>
-
-
-      <div class="input-field col s6">
-        <input id="fuelType1" type="text" class="validate">
+        <input name="fuelType1" id="fuelType1" type="text" class="validate">
         <label for="fuelType1">fuelType1</label>
       </div>
     </div>
 
     <div class="row">
       <div class="input-field col s6">
-        <input id="VClass" type="text" class="validate">
+        <input name="VClass" id="VClass" type="text" class="validate">
         <label for="VClass">VClass</label>
       </div>
 
       <div class="input-field col s6">
-        <input id="trany" type="text" class="validate">
+        <input name="trany" id="trany" type="text" class="validate">
         <label for="trany">trany</label>
       </div>
     </div>
 
     <div class="row">
       <div class="input-field col s6">
-        <input id="createdOn" type="text" class="validate">
+        <input name="createdOn" id="createdOn" type="text" class="validate">
         <label for="createdOn">createdOn</label>
       </div>
 
       <div class="input-field col s6">
-        <input id="fuelCost08" type="text" class="validate">
+        <input name="fuelCost08" id="fuelCost08" type="text" class="validate">
         <label for="fuelCost08">fuelCost08</label>
       </div>
     </div>
@@ -88,18 +85,19 @@
     </div>
   </nav>
 <div id="overflowTest">
-  
-{{#each info}}
-   <ul id="myList">
+  <div id="myDIV">
+  {{#each cars }}
+
+   
   <li> 
      <img class="someClass" src="{{photo}}" width="200"
-        height="200">{{model}}<button class="delete waves-effect waves-light btn" data-id="{{this.id}}">DELETE!</button></li>
+        height="200"></li><li>{{model}}</li><button class="delete waves-effect waves-light btn" data-id="{{this.id}}">DELETE!</button>
     
   <br>
-</ul>
+
+
 {{/each}}
-
-
+</div>
 </div>
 </div>
 </div>
