done with login

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -4,7 +4,8 @@
 <div class="container section scrollspy" id="themes">
     <div class="section">
         <div id="overflowTest">
-            {{#each info}}
+            {{#each cars
+            }}
 
 
             <table>
