--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,8 @@
-<div id="navbar" class="navbar-fixed scrollspy">
+{{!-- <div id="navbar" class="navbar-fixed scrollspy">
     <nav class="pink lighten-1">
         <div class="nav-wrapper container">
-            <div class="container"> <a href="#navbar" class="brand-logo mLogo" style="margin-top: 15px;  color: white;
+            <div class="container">
+                <a href="#navbar" class="brand-logo mLogo" style="margin-top: 15px;  color: white;
   text-shadow: 5px 5px 6px black, 0 0 25px blue, 0 0 5px darkblue"> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
                     &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Premiere</a></div>
 
@@ -20,7 +21,7 @@
 
         </div>
     </nav>
-</div>
+</div> --}}
 
 <div id="index-banner" class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
@@ -86,7 +87,7 @@
             <div id="overflowTest">
 
 
-                {{#each info}}
+                {{#each cars}}
                 <div class="row">
 
 
