--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,6 +17,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
     <title>Document</title>
 
     <!-- Compiled and minified CSS -->
@@ -35,6 +36,7 @@
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
     <script type="text/javascript" script-name="arizonia" src="http://use.edgefonts.net/arizonia.js"></script>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -43,12 +45,13 @@
 
 
 
+
 </head>
 
 <body>
-    <div id="navbar" class="navbar-fixed scrollspy">
+    <div id="navbar" class="navbar-fixed scrollspy ">
 
-        <nav class="pink lighten-1">
+        <nav class="#d50000 red accent-4">
 
             <div class="nav-wrapper container">
                 <div class="container">
@@ -72,7 +75,14 @@
 
     {{{body}}}
 
+<footer class="page-footer" style="background-color: #d50000 red accent-4">
 
+            <div class="footer-copyright">
+                <div class="container">
+                    <p>Copyright © Materialize themes</p>
+                </div>
+            </div>
+        </footer>
 </body>
 
 </html>
