--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,10 +34,10 @@ body{
     background-color: #dddddd;
   } */
 
-#index-banner {
+/* #index-banner {
   background-image: url('https://f1.media.brightcove.com/7/1578086878/1578086878_6093482616001_6093241744001-vs.jpg?pubId=1578086878&videoId=6093241744001');
   padding: 20px 0;
-}
+} */
 
 #overflowTest {
   background: white;
@@ -47,11 +47,20 @@ body{
   overflow: scroll;
   border: 1px solid #ccc;
 }
+#overflowTest1 {
+  background: white;
+  padding: 15px;
+  width: 100%;
+  height: 500px;
+  overflow: scroll;
+  border: 1px solid #ccc;
+}
 
 .mySlides {display:none}
 .w3-left, .w3-right, .w3-badge {cursor:pointer}
 .w3-badge {height:13px;width:13px;padding:0}
-.img{
+.card-title {
  
-  height: 100px;
+  font-size: 10px;
 }
+
