--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -26,19 +26,41 @@
             </div>
         </nav>
     </div>
-    <div class="w3-content w3-display-container" style="max-width:100%"  >
-  <img class="mySlides" src="https://www.galleschevy.com/static/dealer-5643/GAL-WS-1920X600-TM-equinox.jpg" width="100%" height="650" >
-  <img class="mySlides" src="https://di-uploads-pod11.dealerinspire.com/wildetoyota/uploads/2019/09/WT-W-Specials-0919-1.jpg" width="100%" height="650">
-  <img class="mySlides" src="https://di-uploads-pod6.dealerinspire.com/galaxytoyota/uploads/2018/12/wewantyourtrade.jpg" width="100%" height="650">
-  <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
-    <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
-    <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
-    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
-    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
-    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+    
+   
+<div class="slider">
+    <ul class="slides">
+      <li>
+        <img src="https://www.galleschevy.com/static/dealer-5643/GAL-WS-1920X600-TM-equinox.jpg"> <!-- random image -->
+        <div class="caption center-align">
+          <h3>This is our big Tagline!</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+      <li>
+        <img src="https://di-uploads-pod11.dealerinspire.com/wildetoyota/uploads/2019/09/WT-W-Specials-0919-1.jpg"> <!-- random image -->
+        <div class="caption left-align">
+          <h3>Left Aligned Caption</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+      <li>
+        <img src="https://di-uploads-pod6.dealerinspire.com/galaxytoyota/uploads/2018/12/wewantyourtrade.jpg"> <!-- random image -->
+        <div class="caption right-align">
+          <h3>Right Aligned Caption</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+      <li>
+        <img src="https://di-uploads-pod6.dealerinspire.com/galaxytoyota/uploads/2018/12/wewantyourtrade.jpg"> <!-- random image -->
+        <div class="caption center-align">
+          <h3>This is our big Tagline!</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+    </ul>
   </div>
-</div>
-
+      
 
 
     {{!-- <div class="parallax"><img src="data:image/gif;base64,R0lGODlhAQABAIABAP///wAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
@@ -82,18 +104,18 @@
                             <div class="card">
                                 <div class="card-image waves-effect waves-block waves-light">
                                    
-                                        <li><a href="about/model/{{model}}"><img class="someClass" src="{{photo}}"
-                                                    width="200" height="150"></a></li>
+                                        <a href="about/model/{{model}}"><img class="someClass" src="{{photo}}"
+                                                    width="200" height="150"></a>
                                    
                                 </div>
                                 <div class="card-content">
-                                    <span class="card-title activator grey-text text-darken-4">{{model}}<i
-                                            class="mdi-navigation-more-vert right"></i></span>
+                                    <span class=" card  grey-text text-darken-2 " ><a href="about/model/{{model}}">{{model}}</a><i
+                                            class="mdi-navigation-more-vert right">seal $ {{fuelCost08}}</i></span>
                                     <br>
 
                                 </div>
                                 <div class="card-reveal">
-                                    <span class="card-title grey-text text-darken-4">seal $ {{fuelCost08}}<i
+                                    <span class="card-title grey-text text-darken-2">seal $ {{fuelCost08}}<i
                                             class="mdi-navigation-close right">{{trany}}</i>
                                         <p>hjhjhjhjhjhjhjhjhj</p>
                                     </span>
