--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 ​
+
 <head>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-​
+    ​
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Compiled and minified JavaScript -->
-​
+    ​
     <script type="text/javascript" src="js/materialize.min.js"></script>
-​
+    ​
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
     <title>Document</title>
-​
+    ​
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
@@ -38,51 +39,46 @@
     <script type="text/javascript" script-name="arizonia" src="http://use.edgefonts.net/arizonia.js"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <!-- Compiled and minified JavaScript -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    ​
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
+    ​
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="/css/style.css" type="text/css" />
     <script src="js/premiere.js"></script>
-​
-​
-​
-​
+
 </head>
 ​
+
 <body>
     <div id="navbar" class="navbar-fixed scrollspy ">
-​
-        <nav class="#d50000 red accent-4">
-​
-            <div class="nav-wrapper container">
-                <div class="container">
-                    <hi>Premiere</hi><a href="#navbar" class="brand-logo mLogo" style="margin-top: 15px;  color: white;
-  text-shadow: 5px 5px 6px black, 0 0 25px blue, 0 0 5px darkblue"> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-                        &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </a>
-                </div>
-​
-                <a style="" href="#" data-activates="mobile-demo" class="button-collapse"><i
-                        class="mdi-navigation-menu"></i></a>
-                <ul class="right hide-on-med-and-down">
-​
-​
-​
-​
-                </ul>
-​
-            </div>
+        ​ <nav class="#d50000 red accent-4"></nav>
+
+
+        ​
+        <div class="nav-wrapper container">
+            <hi>Premiere</hi>
+        </div>​
+
+        ​
+
         </nav>
     </div>
-​
+    ​
     {{{body}}}
-​
-<footer class="page-footer" style="background-color: #d50000 red accent-4">
-​
-            <div class="footer-copyright #d50000 red accent-4">
-                <div class="container #d50000 red accent-4">
-                    <p>Copyright © Materialize themes</p>
-                </div>
+    ​
+    <footer class="page-footer" style="background-color: #d50000 red accent-4">
+        ​
+        <div class="footer-copyright #d50000 red accent-4">
+            <div class="container #d50000 red accent-4">
+                <p>Copyright © Materialize themes</p>
             </div>
-        </footer>
+        </div>
+    </footer>
 </body>
 ​
+
 </html>
