--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,47 +1,38 @@
-
-body{
-    background: #fff;
-    background-image: url('https://f1.media.brightcove.com/7/1578086878/1578086878_6093482616001_6093241744001-vs.jpg?pubId=1578086878&videoId=6093241744001');
-
-  }
-  .box {
-    transition: box-shadow .3s;
-    width: 700px;
-    height: 300px;
-    margin: 50px;
-    border-radius:10px;
-    border: 1px solid #ccc;
-    background: #fff;
-    float: left;
-    
-  }
-  .box:hover {
-    box-shadow: 0 0 11px rgba(33,33,33,.2); 
-  }
-
-
-  /* table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #dddddd;
-  } */
-
-#index-banner {
-  background-image: url('https://f1.media.brightcove.com/7/1578086878/1578086878_6093482616001_6093241744001-vs.jpg?pubId=1578086878&videoId=6093241744001');
-  padding: 20px 0;
+body {
+  background: #fff;
+}
+.box {
+  transition: box-shadow 0.3s;
+  width: 700px;
+  height: 300px;
+  margin: 50px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background: #fff;
+  float: left;
+}
+.box:hover {
+  box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
+}
+/* table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
 }
 
-/* 
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+} */
+/* #index-banner {
+background-image: url('https://f1.media.brightcove.com/7/1578086878/1578086878_6093482616001_6093241744001-vs.jpg?pubId=1578086878&videoId=6093241744001');
+padding: 20px 0;
+} */
 #overflowTest {
   background: white;
   padding: 15px;
@@ -49,20 +40,75 @@ body{
   height: 750px;
   overflow: scroll;
   border: 1px solid #ccc;
-} */
-
-.search-bar {
-  opacity: .5;
+}
+#overflowTest1 {
+  background: white;
+  padding: 15px;
+  width: 100%;
+  height: 500px;
+  overflow: scroll;
+  border: 1px solid #ccc;
+}
+.mySlides {
+  display: none;
+}
+.w3-left,
+.w3-right,
+.w3-badge {
+  cursor: pointer;
+}
+.w3-badge {
+  height: 13px;
+  width: 13px;
+  padding: 0;
+}
+.card-title {
+  font-size: 10px;
 }
 
-.mySlides {display:none}
-.w3-left, .w3-right, .w3-badge {cursor:pointer}
-.w3-badge {height:13px;width:13px;padding:0}
-.img{
- 
-  height: 100px;
+body {
+  background: #fff;
+}
+.box {
+  transition: box-shadow 0.3s;
+  width: 700px;
+  height: 300px;
+  margin: 50px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background: #fff;
+  float: left;
+}
+.box:hover {
+  box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
+}
 
-#search{
-  background-color: rgba(226, 160, 226, 0.26);
-  opacity: 50%;
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td,
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+body {
+  background-image: url('https://f1.media.brightcove.com/7/1578086878/1578086878_6093482616001_6093241744001-vs.jpg?pubId=1578086878&videoId=6093241744001');
+}
+
+#overflowTest {
+  background: white;
+  padding: 15px;
+  width: 100%;
+  height: 750px;
+  overflow: scroll;
+  border: 1px solid #ccc;
 }
