now compering with ahmed job

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,125 +1,99 @@
 <div id="index-banner" class="parallax-container valign-wrapper">
-    <img  src="https://f1.media.brightcove.com/7/1578086878/1578086878_6093482616001_6093241744001-vs.jpg?pubId=1578086878&videoId=6093241744001" width="100%" height="700" >
-    </div>
-<div id="navbar" >
-        <nav class="#d50000 red accent-4">
-            <div class="nav-wrapper container">
-                <div class="container">
-                    <hi></hi><a href="#navbar" class="brand-logo mLogo" style="margin-top: 15px;  color: white;
-  text-shadow: 5px 5px 6px black, 0 0 25px blue, 0 0 5px darkblue"> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-                        &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </a>
-                </div>
-                <a style="" href="#" data-activates="mobile-demo" class="button-collapse"><i
-                        class="mdi-navigation-menu"></i></a>
-                <ul class="right hide-on-med-and-down">
-                </ul>
-            </div>
-        </nav>
-    </div>
-    <br>
-   {{!-- <div id="index-banner" class="parallax-container valign-wrapper">
-    <div class="w3-content w3-display-container" style="max-width:100%"  >
-  <img class="mySlides" src="https://www.galleschevy.com/static/dealer-5643/GAL-WS-1920X600-TM-equinox.jpg" width="100%" height="650" >
-  <img class="mySlides" src="https://di-uploads-pod11.dealerinspire.com/wildetoyota/uploads/2019/09/WT-W-Specials-0919-1.jpg" width="100%" height="650">
-  <img class="mySlides" src="https://di-uploads-pod6.dealerinspire.com/galaxytoyota/uploads/2018/12/wewantyourtrade.jpg" width="100%" height="650">
-  {{!-- <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
-    <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
-    <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
-    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
-    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
-    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
-   
-  </div> --}}
+  <img
+    src="https://f1.media.brightcove.com/7/1578086878/1578086878_6093482616001_6093241744001-vs.jpg?pubId=1578086878&videoId=6093241744001"
+    width="100%" height="700">
 </div>
-</div> --}}
+
+
 <div class="slider">
-    <ul class="slides">
-      <li>
-        <img src="https://www.galleschevy.com/static/dealer-5643/GAL-WS-1920X600-TM-equinox.jpg"> <!-- random image -->
-        <div class="caption center-align">
-          <h3>This is our big Tagline!</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-        </div>
-      </li>
-      <li>
-        <img src="https://di-uploads-pod11.dealerinspire.com/wildetoyota/uploads/2019/09/WT-W-Specials-0919-1.jpg"> <!-- random image -->
-        <div class="caption left-align">
-          <h3>Left Aligned Caption</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-        </div>
-      </li>
-      <li>
-        <img src="https://di-uploads-pod6.dealerinspire.com/galaxytoyota/uploads/2018/12/wewantyourtrade.jpg"> <!-- random image -->
-        <div class="caption right-align">
-          <h3>Right Aligned Caption</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-        </div>
-      </li>
-      <li>
-        <img src="https://lorempixel.com/580/250/nature/4"> <!-- random image -->
-        <div class="caption center-align">
-          <h3>This is our big Tagline!</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-        </div>
-      </li>
-    </ul>
-  </div>
-      
-    {{!-- <div class="parallax"><img src="data:image/gif;base64,R0lGODlhAQABAIABAP///wAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+  <ul class="slides">
+    <li>
+      <img src="https://www.galleschevy.com/static/dealer-5643/GAL-WS-1920X600-TM-equinox.jpg"> <!-- random image -->
+      <div class="caption center-align">
+        <h3>This is our big Tagline!</h3>
+        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+      </div>
+    </li>
+    <li>
+      <img src="https://di-uploads-pod11.dealerinspire.com/wildetoyota/uploads/2019/09/WT-W-Specials-0919-1.jpg">
+      <!-- random image -->
+      <div class="caption left-align">
+        <h3>Left Aligned Caption</h3>
+        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+      </div>
+    </li>
+    <li>
+      <img src="https://di-uploads-pod6.dealerinspire.com/galaxytoyota/uploads/2018/12/wewantyourtrade.jpg">
+      <!-- random image -->
+      <div class="caption right-align">
+        <h3>Right Aligned Caption</h3>
+        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+      </div>
+    </li>
+    <li>
+      <img src="https://lorempixel.com/580/250/nature/4"> <!-- random image -->
+      <div class="caption center-align">
+        <h3>This is our big Tagline!</h3>
+        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+      </div>
+    </li>
+  </ul>
+</div>
+
+{{!-- <div class="parallax"><img src="data:image/gif;base64,R0lGODlhAQABAIABAP///wAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
             alt="Unsplashed background img 2"
             style="background-image: url(&quot;images/newpink.jpg&quot;); bottom: -342.162px; display: block;"> --}}
-        <div class="container section scrollspy " id="themes">
-            <div class="section">
+<div class="container section scrollspy " id="themes">
+  <div class="section">
+    <br>
+    <br>
+    <br>
+    <nav>
+      <div class="nav-wrapper">
+        <form>
+          <div class="input-field #d50000 red accent-4">
+            <input id="search" type="search">
+            {{!-- <input id="myInput" type="text" placeholder="Search.."> --}}
+            <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+            <i class="material-icons">close</i>
+          </div>
+        </form>
+      </div>
+    </nav>
+    <div id="overflowTest">
+      <div class="myDIV">
+        <div class="row">
+          {{#each cars}}
+
+          <!--col-->
+          <br>
+          <div class="col s12 m4">
+            <div class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+
+                <a href="about/model/{{model}}"><img class="someClass" src="{{photo}}" width="200" height="150"></a>
+
+              </div>
+              <div class="card-content">
+                <span class=" card  grey-text text-darken-2 "><a href="about/model/{{model}}">{{model}}</a><i
+                    class="mdi-navigation-more-vert right">seal $ {{fuelCost08}}</i></span>
                 <br>
-                <br>
-                <br>
-                <nav>
-                    <div class="nav-wrapper">
-                        <form>
-                            <div class="input-field #d50000 red accent-4">
-                                <input id="search" type="search">
-                                {{!-- <input id="myInput" type="text" placeholder="Search.."> --}}
-                                <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                                <i class="material-icons">close</i>
-                            </div>
-                        </form>
-                    </div>
-                </nav>
-                <div id="overflowTest">
-<div class="myDIV">
-    <div class="row">
-                    {{#each cars}}
-                    
-                        <!--col-->
-                        <br>
-                        <div class="col s12 m4">
-                            <div class="card">
-                                <div class="card-image waves-effect waves-block waves-light">
-                                   
-                                        <a href="about/model/{{model}}"><img class="someClass" src="{{photo}}"
-                                                    width="200" height="150"></a>
-                                   
-                                </div>
-                                <div class="card-content">
-                                    <span class=" card  grey-text text-darken-2 " ><a href="about/model/{{model}}">{{model}}</a><i
-                                            class="mdi-navigation-more-vert right">seal $ {{fuelCost08}}</i></span>
-                                    <br>
-                                </div>
-                                <div class="card-reveal">
-                                    <span class="card-title grey-text text-darken-2">seal $ {{fuelCost08}}<i
-                                            class="mdi-navigation-close right">{{trany}}</i>
-                                        <p>hjhjhjhjhjhjhjhjhj</p>
-                                    </span>
-                                </div>
-                            </div>
-                            <!--card-->
-                        </div>
-                        <!--col-->
-                        <!--row-->
-                
-                    {{/each}}
-    </div>
-                    </div>
-                </div>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-2">seal $ {{fuelCost08}}<i
+                    class="mdi-navigation-close right">{{trany}}</i>
+                  <p>hjhjhjhjhjhjhjhjhj</p>
+                </span>
+              </div>
             </div>
+            <!--card-->
+          </div>
+          <!--col-->
+          <!--row-->
+
+          {{/each}}
         </div>
+      </div>
+    </div>
+  </div>
+</div>
