--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<h1 style="color: rgb(8, 236, 57);
+{{!-- <h1 style="color: rgb(8, 236, 57);
   text-shadow: 2px 8px 4px #01000e"> Login</h1>
 <form action="/login" method="POST">
 
@@ -17,4 +17,37 @@
 
 </form>
 <a style="color: white;
-  text-shadow: 2px 2px 4px #000000" href="/register">register</a>
+  text-shadow: 2px 2px 4px #000000" href="/register">register</a> --}}
+
+<div class="container">
+  <h1 class="brand"><span>Acme</span> Web Design</h1>
+  <div class="wrapper animated bounceInLeft">
+    <div class="company-info">
+      <h3>Acme Web Design</h3>
+      <ul>
+        <li><i class="fa fa-road"></i> 44 Something st</li>
+        <li><i class="fa fa-phone"></i> (555) 555-5555</li>
+        <li><i class="fa fa-envelope"></i> test@acme.test</li>
+      </ul>
+    </div>
+    <div class="contact">
+      <h3>Email Us</h3>
+
+      <form method="POST" action="/login">
+
+        <p>
+          <label>Email Address</label>
+          <input type="email" id="email" name="email" required>
+        </p>
+        <p>
+          <label> password</label>
+          <input type="password" id="password" name="password" required>
+        </p>
+
+        <p class="full">
+          <button type="submit">Submit</button>
+        </p>
+      </form>
+    </div>
+  </div>
+</div>
