--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,49 +66,103 @@ padding: 20px 0;
   font-size: 10px;
 }
 
-body {
-  background: #fff;
-}
-.box {
-  transition: box-shadow 0.3s;
-  width: 700px;
-  height: 300px;
-  margin: 50px;
-  border-radius: 10px;
-  border: 1px solid #ccc;
-  background: #fff;
-  float: left;
-}
-.box:hover {
-  box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
+.container {
+  max-width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1em;
 }
 
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+.brand {
+  text-align: center;
+}
+
+.brand span {
+  color: #fff;
+}
+
+.wrapper {
+  box-shadow: 0 0 20px 0 rgba(72, 94, 116, 0.7);
+}
+
+.wrapper > * {
+  padding: 1em;
+}
+
+.company-info {
+  background: #c9e6ff;
+}
+
+.company-info h3,
+.company-info ul {
+  text-align: center;
+  margin: 0 0 1rem 0;
+}
+
+.contact {
+  background: #f9feff;
+}
+
+/* FORM STYLES */
+.contact form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.contact form label {
+  display: block;
+}
+
+.contact form p {
+  margin: 0;
+}
+
+.contact form .full {
+  grid-column: 1 / 3;
+}
+
+.contact form button,
+.contact form input,
+.contact form textarea {
   width: 100%;
+  padding: 1em;
+  border: 1px solid #c9e6ff;
 }
 
-td,
-th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
+.contact form button {
+  background: #c9e6ff;
+  border: 0;
+  text-transform: uppercase;
 }
 
-tr:nth-child(even) {
-  background-color: #dddddd;
+.contact form button:hover,
+.contact form button:focus {
+  background: #92bde7;
+  color: #fff;
+  outline: 0;
+  transition: background-color 2s ease-out;
 }
 
-body {
-  background-image: url('https://f1.media.brightcove.com/7/1578086878/1578086878_6093482616001_6093241744001-vs.jpg?pubId=1578086878&videoId=6093241744001');
-}
+/* LARGE SCREENS */
+@media (min-width: 700px) {
+  .wrapper {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
 
-#overflowTest {
-  background: white;
-  padding: 15px;
-  width: 100%;
-  height: 750px;
-  overflow: scroll;
-  border: 1px solid #ccc;
+  .wrapper > * {
+    padding: 2em;
+  }
+
+  .company-info h3,
+  .company-info ul,
+  .brand {
+    text-align: left;
+  }
 }
