--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 ​
 
 <head>
+
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -22,7 +23,6 @@
     <title>Document</title>
     ​
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection">
     <link rel="stylesheet" href="css/font-awesome-4.3.0/css/font-awesome.min.css">
@@ -31,11 +31,13 @@
     <link async="" href="http://fonts.googleapis.com/css?family=Aclonica" rel="stylesheet" type="text/css">
     <link rel="shortcut icon" href="images/favicon (10).ico" type="image/x-icon">
     <link rel="icon" href="images/favicon (10).ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
     <link rel="stylesheet" href="https://use.edgefonts.net/c/a709e5/1w;arizonia,2,WXG:W:n4/l" media="all">
     <script async="" src="https://www.google-analytics.com/analytics.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
+
     <script type="text/javascript" script-name="arizonia" src="http://use.edgefonts.net/arizonia.js"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <!-- Compiled and minified JavaScript -->
@@ -54,23 +56,21 @@
 ​
 
 <body>
-    <div id="navbar" class="navbar-fixed scrollspy ">
-        ​ <nav class="#d50000 red accent-4"></nav>
+    ​ <nav class="#d50000 red accent-4"></nav>
 
 
-        ​
-        <div class="nav-wrapper container">
-            <hi>Premiere</hi>
-        </div>​
+    ​
+    <div class="nav-wrapper container">
+        <hi>Premiere</hi>
+    </div>​
 
-        ​
+    ​
 
-        </nav>
-    </div>
+    </nav>
     ​
     {{{body}}}
     ​
-    <footer class="page-footer" style="background-color: #d50000 red accent-4">
+    <footer>
         ​
         <div class="footer-copyright #d50000 red accent-4">
             <div class="container #d50000 red accent-4">
