--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,4 +1,4 @@
-<h1 style="color: white;
+{{!-- <h1 style="color: white;
   text-shadow: 2px 8px 4px #10c57a">Register</h1>
 <form action="/register" method="POST">
     <div>
@@ -20,4 +20,48 @@
   text-shadow: 2px 2px 4px #000000" type="submit">Register</button>
 </form>
 <a style="color: white;
-  text-shadow: 2px 2px 4px #f35c5c" href="/login">Login</a>
+  text-shadow: 2px 2px 4px #f35c5c" href="/login">Login</a> --}}
+
+
+<div class="container">
+  <h1 class="brand"><span>Acme</span> Web Design</h1>
+  <div class="wrapper animated bounceInLeft">
+    <div class="company-info">
+      <h3>Acme Web Design</h3>
+      <ul>
+        <li><i class="fa fa-road"></i> 44 Something st</li>
+        <li><i class="fa fa-phone"></i> (555) 555-5555</li>
+        <li><i class="fa fa-envelope"></i> test@acme.test</li>
+      </ul>
+    </div>
+    <div class="contact">
+      <h3>Email Us</h3>
+
+      <form method="POST" action="/register">
+        <p>
+          <label>Name</label>
+          <input type="text" id="name" name="name" required>
+        </p>
+        <p>
+          <label>Company</label>
+          <input type="text" name="company">
+        </p>
+        <p>
+          <label>Email Address</label>
+          <input type="email" id="email" name="email" required>
+        </p>
+        <p>
+          <label> password</label>
+          <input type="password" id="password" name="password" required>
+        </p>
+        <p class="full">
+          <label>Message</label>
+          <textarea name="message" rows="5"></textarea>
+        </p>
+        <p class="full">
+          <button type="submit">Submit</button>
+        </p>
+      </form>
+    </div>
+  </div>
+</div>
