--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -60,7 +60,8 @@
 
             <div class="nav-wrapper container">
                 <div class="container">
-                    <hi>Premiere</hi><a href="#navbar" class="brand-logo mLogo" style="margin-top: 15px;  color: white;
+                    <hi style=" color: white;
+  text-shadow: 4px 4px 6px #000000;">&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp  &nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp Premiere</hi><a href="#navbar" class="brand-logo mLogo" style="margin-top: 15px;  color: white;
   text-shadow: 5px 5px 6px black, 0 0 25px blue, 0 0 5px darkblue"> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
                         &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </a>
                 </div>
