--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,28 +31,28 @@
 <div class="slider">
     <ul class="slides">
       <li>
-        <img src="https://www.galleschevy.com/static/dealer-5643/GAL-WS-1920X600-TM-equinox.jpg"> <!-- random image -->
+        <img src="https://www.setaswall.com/wp-content/uploads/2017/04/Audi-Wallpaper-6-1920x1200.jpg"> <!-- random image -->
         <div class="caption center-align">
           <h3>This is our big Tagline!</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
         </div>
       </li>
       <li>
-        <img src="https://di-uploads-pod11.dealerinspire.com/wildetoyota/uploads/2019/09/WT-W-Specials-0919-1.jpg"> <!-- random image -->
+        <img src="http://www.toyotaofseattle.com/blogs/2066/wp-content/uploads/2016/09/toyota-camry-2019.jpeg"> <!-- random image -->
         <div class="caption left-align">
           <h3>Left Aligned Caption</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
         </div>
       </li>
       <li>
-        <img src="https://di-uploads-pod6.dealerinspire.com/galaxytoyota/uploads/2018/12/wewantyourtrade.jpg"> <!-- random image -->
+        <img src="https://di-uploads-pod17.dealerinspire.com/southdadetoyotaofhomestead/uploads/2017/05/best-toyota-lease-deals.jpg"> <!-- random image -->
         <div class="caption right-align">
           <h3>Right Aligned Caption</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
         </div>
       </li>
       <li>
-        <img src="https://di-uploads-pod6.dealerinspire.com/galaxytoyota/uploads/2018/12/wewantyourtrade.jpg"> <!-- random image -->
+        <img src="https://img.gaadicdn.com/images/carexteriorimages/930x620/Hyundai/Hyundai-Verna/5971/rear-right-side-48.jpg"> <!-- random image -->
         <div class="caption center-align">
           <h3>This is our big Tagline!</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
@@ -92,7 +92,7 @@
 <div class="myDIV">
     <div class="row">
                     {{#each cars}}
-                    
+                        
 
 
 
@@ -110,18 +110,18 @@
                                 </div>
                                 <div class="card-content">
                                     <span class=" card  grey-text text-darken-2 " ><a href="about/model/{{model}}">{{model}}</a><i
-                                            class="mdi-navigation-more-vert right">seal $ {{fuelCost08}}</i></span>
+                                            class=" right">seal $ {{fuelCost08}}</i></span>
                                     <br>
 
                                 </div>
-                                <div class="card-reveal">
+                                {{!-- <div class="card-reveal">
                                     <span class="card-title grey-text text-darken-2">seal $ {{fuelCost08}}<i
                                             class="mdi-navigation-close right">{{trany}}</i>
                                         <p>hjhjhjhjhjhjhjhjhj</p>
                                     </span>
 
 
-                                </div>
+                                </div> --}}
                             </div>
                             <!--card-->
                         </div>
